Add build target for starting Tomcat with JRebel - #2106 Author: mseaton
git-svn-id: http://svn.openmrs.org/openmrs/trunk@13608 5bac5841-c719-aa4e-b3fe-cce5062f897a